readme file updated

--- a/src/index.html
+++ b/src/index.html
@@ -9,12 +9,8 @@
     <link rel="stylesheet" href="css/tailwind.css" />
   </head>
   <body
-    class="ud-relative ud-z-10 ud-flex ud-min-h-screen ud-items-center ud-justify-center ud-bg-white dark:ud-bg-slate-800"
+    class="ud-relative ud-z-10 ud-flex ud-min-h-screen ud-items-center ud-justify-center ud-overflow-hidden ud-bg-white dark:ud-bg-slate-800"
   >
-    <!-- ======= Header Start ======= -->
-    <!-- <header></header> -->
-    <!-- ======= Header End ======= -->
-
     <!-- ======= Main Start ======= -->
     <main>
       <!-- ======= Hero Start ======= -->
